@@ -54,17 +54,17 @@ typedef struct {
 
 typedef void *STIFF;
 
-void CPL_DLL GTIFSetSimpleTagsMethods(TIFFMethod *method);
+void GTIF_DLL GTIFSetSimpleTagsMethods(TIFFMethod *method);
 
-int CPL_DLL ST_SetKey( ST_TIFF *, int tag, int count,
+int GTIF_DLL ST_SetKey( ST_TIFF *, int tag, int count,
                        int st_type, void *data );
-int CPL_DLL ST_GetKey( ST_TIFF *, int tag, int *count,
+int GTIF_DLL ST_GetKey( ST_TIFF *, int tag, int *count,
                        int *st_type, void **data_ptr );
 
-ST_TIFF CPL_DLL *ST_Create( void );
-void CPL_DLL ST_Destroy( ST_TIFF * );
+ST_TIFF GTIF_DLL *ST_Create( void );
+void GTIF_DLL ST_Destroy( ST_TIFF * );
 
-int CPL_DLL ST_TagType( int tag );
+int GTIF_DLL ST_TagType( int tag );
 
 #if defined(__cplusplus)
 }
