@@ -17,8 +17,8 @@
  * library (usually libtiff).
  */
 
-/* 
- *  Define public Tag names and values here 
+/*
+ *  Define public Tag names and values here
  */
 
 /* tags 33550 is a private tag registered to SoftDesk, Inc */
@@ -28,15 +28,15 @@
 #define TIFFTAG_GEOTIEPOINTS         33922
 /* tags 34263-34264 are private tags registered to NASA-JPL Carto Group */
 #ifdef JPL_TAG_SUPPORT
-#define TIFFTAG_JPL_CARTO_IFD        34263    /* $use GeoProjectionInfo ! */
+#define TIFFTAG_JPL_CARTO_IFD        34263   /* $use GeoProjectionInfo ! */
 #endif
-#define TIFFTAG_GEOTRANSMATRIX       34264    /* New Matrix Tag replaces 33920 */
+#define TIFFTAG_GEOTRANSMATRIX       34264   /* New Matrix Tag replaces 33920 */
 /* tags 34735-3438 are private tags registered to SPOT Image, Inc */
 #define TIFFTAG_GEOKEYDIRECTORY      34735
 #define TIFFTAG_GEODOUBLEPARAMS      34736
 #define TIFFTAG_GEOASCIIPARAMS       34737
 
-/* 
+/*
  *  Define Printing method flags. These
  *  flags may be passed in to TIFFPrintDirectory() to
  *  indicate that those particular field values should
@@ -57,20 +57,20 @@ extern "C" {
 /**********************************************************************
  * Do we want to build as a DLL on windows?
  **********************************************************************/
-#if !defined(CPL_DLL)
+#if !defined(GTIF_DLL)
 #  if defined(_WIN32) && defined(BUILD_AS_DLL)
-#    define CPL_DLL     __declspec(dllexport)
+#    define GTIF_DLL     __declspec(dllexport)
 #  else
-#    define CPL_DLL
+#    define GTIF_DLL
 #  endif
 #endif
 
-extern void CPL_DLL XTIFFInitialize(void);
-extern TIFF CPL_DLL * XTIFFOpen(const char* name, const char* mode);
-extern TIFF CPL_DLL * XTIFFFdOpen(int fd, const char* name, const char* mode);
-extern void CPL_DLL XTIFFClose(TIFF *tif);
+extern void GTIF_DLL XTIFFInitialize(void);
+extern TIFF GTIF_DLL * XTIFFOpen(const char* name, const char* mode);
+extern TIFF GTIF_DLL * XTIFFFdOpen(int fd, const char* name, const char* mode);
+extern void GTIF_DLL XTIFFClose(TIFF *tif);
 
-extern TIFF CPL_DLL * XTIFFClientOpen(const char* name, const char* mode, 
+extern TIFF GTIF_DLL * XTIFFClientOpen(const char* name, const char* mode,
                                       thandle_t thehandle,
                                       TIFFReadWriteProc, TIFFReadWriteProc,
                                       TIFFSeekProc, TIFFCloseProc,
@@ -81,4 +81,3 @@ extern TIFF CPL_DLL * XTIFFClientOpen(const char* name, const char* mode,
 #endif
 
 #endif /* LIBGEOTIFF_XTIFFIO_H_ */
-
